--- a/arch/arm/boot/dts/qcom/msm8939-common.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8939-common.dtsi
@@ -63,11 +63,13 @@
 			label = "peripheral_mem";
 		};
 
-		mba_mem: mba_region@0 {
+    pstore_reserve_mem: pstore_reserve_mem_region@0 {
 			linux,reserve-contiguous-region;
-			reg = <0 0 0 0x0200000>;
-			label = "mba_mem";
-		};
+			linux,reserve-region;
+			linux,remove-completely;
+			reg = <0x0 0x9ff00000 0x0 0x00100000>;
+			label = "pstore_reserve_mem";
+    };
 
 		venus_mem: venus_region@0 {
 			linux,reserve-contiguous-region;
