--- a/arch/arm64/configs/msm-perf_defconfig
+++ b/arch/arm64/configs/msm-perf_defconfig
@@ -499,9 +499,9 @@ CONFIG_MSM_CORE_CTL_HELPER=y
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 CONFIG_MSM_TZ_LOG=y
-CONFIG_EXT2_FS=y
-CONFIG_EXT2_FS_XATTR=y
-CONFIG_EXT3_FS=y
+#CONFIG_EXT2_FS is not set
+#CONFIG_EXT2_FS_XATTR is not set
+#CONFIG_EXT3_FS is not set
 # CONFIG_EXT3_DEFAULTS_TO_ORDERED is not set
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
