A6020: defconfig: Enable BFQ IOSCHED
* Use NOOP IOSCHED as default

Change-Id: I7cc3e670646f58ca0e03e0abf33c04af783d0d63

--- a/arch/arm64/configs/msm-perf_defconfig
+++ b/arch/arm64/configs/msm-perf_defconfig
@@ -443,6 +443,9 @@ CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_ONESHOT_SYNC=y
 CONFIG_ION=y
 CONFIG_ION_MSM=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
+CONFIG_DEFAULT_NOOP=y
 CONFIG_SPS=y
 CONFIG_SPS_SUPPORT_NDP_BAM=y
 CONFIG_QPNP_POWER_ON=y
