--- a/arch/arm64/configs/msm-perf_defconfig
+++ b/arch/arm64/configs/msm-perf_defconfig
@@ -321,10 +321,7 @@ CONFIG_THERMAL_TSENS8974=y
 CONFIG_THERMAL_MONITOR=y
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
-<<<<<<< HEAD
 CONFIG_WCD9335_CODEC=y
-=======
->>>>>>> Revert "ASOC: Merging the wcd9335 tasha codec changes"
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_PROXY_CONSUMER=y
@@ -554,3 +551,4 @@ CONFIG_BUILD_ARM64_UNCOMPRESSED_APPENDED_DTB_IMAGE=y
 CONFIG_UID_CPUTIME=y
 CONFIG_MSM_BOOT_STATS=y
 CONFIG_LENOVO_WT82918=y
+CONFIG_WLAN_OFFLOAD_PACKETS=y
