--- a/arch/arm64/configs/msm-perf_defconfig
+++ b/arch/arm64/configs/msm-perf_defconfig
@@ -565,4 +565,4 @@ CONFIG_WLAN_OFFLOAD_PACKETS=y
 CONFIG_QCOM_TDLS=y
 CONFIG_ENABLE_LINUX_REG=y
 CONFIG_ARCH_MMAP_RND_BITS=16
-
+CONFIG_WAKE_GESTURES=y
