--- a/arch/arm64/configs/msm-perf_defconfig
+++ b/arch/arm64/configs/msm-perf_defconfig
@@ -564,3 +564,4 @@ CONFIG_QCOM_TDLS=y
 CONFIG_ENABLE_LINUX_REG=y
 CONFIG_ARCH_MMAP_RND_BITS=16
 CONFIG_IP_NF_MATCH_RPFILTER=y
+CONFIG_WAKE_GESTURES=y
