--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -53,7 +53,11 @@ libs-y		+= $(LIBGCC)
 ifeq ($(CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE),y)
 KBUILD_IMAGE	:= $(subst $\",,$(CONFIG_BUILD_ARM64_APPENDED_KERNEL_IMAGE_NAME))
 else
+ifeq ($(CONFIG_BUILD_ARM64_UNCOMPRESSED_APPENDED_DTB_IMAGE),y)
+KBUILD_IMAGE	:= Image-dtb
+else
 KBUILD_IMAGE	:= Image.gz
+endif
 endif
 
 KBUILD_DTBS	:= dtbs
