--- a/arch/arm64/configs/msm-perf_defconfig
+++ b/arch/arm64/configs/msm-perf_defconfig
@@ -276,6 +276,8 @@ CONFIG_SENSORS_MMC3416X=y
 CONFIG_SENSORS_AKM09911=y
 CONFIG_SENSORS_AKM8963=y
 CONFIG_SENSORS_BMA2X2=y
+CONFIG_SENSORS_ELAN_EPL259x=y
+CONFIG_SENSORS_ST480=y
 # CONFIG_SERIO_I8042 is not set
 # CONFIG_VT is not set
 # CONFIG_LEGACY_PTYS is not set
@@ -301,12 +303,14 @@ CONFIG_USE_PINCTRL_IRQ=y
 CONFIG_PINCTRL_MSM_TLMM=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_QPNP_PIN=y
+CONFIG_SM5414_CHARGER=y
 CONFIG_SMB135X_CHARGER=y
 CONFIG_SMB1360_CHARGER_FG=y
 CONFIG_BATTERY_BCL=y
 CONFIG_QPNP_VM_BMS=y
 CONFIG_QPNP_LINEAR_CHARGER=y
 CONFIG_POWER_RESET_MSM=y
+CONFIG_MSM_PRESERVE_MEM=y
 CONFIG_MSM_DLOAD_MODE=y
 CONFIG_MSM_PM=y
 CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
@@ -537,3 +541,8 @@ CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_QMI_ENCDEC=y
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
+CONFIG_BUILD_ARM64_UNCOMPRESSED_APPENDED_DTB_IMAGE=y
+CONFIG_UID_CPUTIME=y
+CONFIG_MSM_BOOT_STATS=y
+CONFIG_LENOVO_WT82918=y
