--- a/arch/arm64/configs/A6020_k5_defconfig
+++ b/arch/arm64/configs/A6020_k5_defconfig
@@ -443,6 +443,7 @@ CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
 # CONFIG_ARCH_NEEDS_CPU_IDLE_COUPLED is not set
 CONFIG_NET=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_COMPAT_NETLINK_MESSAGES=y
 
 #
