msm8916: defconfig: Enable CONFIG_WQ_POWER_EFFICIENT_DEFAULT

--- a/arch/arm64/configs/msm-perf_defconfig
+++ b/arch/arm64/configs/msm-perf_defconfig
@@ -565,3 +565,4 @@ CONFIG_ENABLE_LINUX_REG=y
 CONFIG_ARCH_MMAP_RND_BITS=16
 CONFIG_IP_NF_MATCH_RPFILTER=y
 CONFIG_WAKE_GESTURES=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
