--- a/arch/arm64/configs/msm-perf_defconfig
+++ b/arch/arm64/configs/msm-perf_defconfig
@@ -552,4 +552,13 @@ CONFIG_BUILD_ARM64_UNCOMPRESSED_APPENDED_DTB_IMAGE=y
 CONFIG_UID_CPUTIME=y
 CONFIG_MSM_BOOT_STATS=y
 CONFIG_LENOVO_WT82918=y
+CONFIG_PRONTO_WLAN=y
+CONFIG_PRIMA_WLAN_LFR=y
+CONFIG_PRIMA_WLAN_OKC=y
+CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
+CONFIG_WLAN_FEATURE_11W=y
+CONFIG_QCOM_VOWIFI_11R=y
+CONFIG_WLAN_OFFLOAD_PACKETS=y
+CONFIG_QCOM_TDLS=y
+CONFIG_ENABLE_LINUX_REG=y
 CONFIG_WLAN_OFFLOAD_PACKETS=y
