--- a/arch/arm64/configs/msm-perf_defconfig
+++ b/arch/arm64/configs/msm-perf_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION="-DarkKnight"
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
@@ -495,7 +495,7 @@ CONFIG_MSM_OCMEM=y
 CONFIG_MSM_OCMEM_LOCAL_POWER_CTRL=y
 CONFIG_MSM_BOOT_STATS=y
 CONFIG_MSM_SCM=y
-CONFIG_MSM_CORE_CTL_HELPER=y
+CONFIG_MSM_CORE_CTL=y
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 CONFIG_MSM_TZ_LOG=y
@@ -519,7 +519,6 @@ CONFIG_MAGIC_SYSRQ=y
 CONFIG_PANIC_ON_RECURSIVE_FAULT=y
 # CONFIG_SCHED_DEBUG is not set
 CONFIG_SCHEDSTATS=y
-CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_DEBUG_BUGVERBOSE is not set
 CONFIG_DEBUG_INFO=y
@@ -561,4 +560,5 @@ CONFIG_QCOM_VOWIFI_11R=y
 CONFIG_WLAN_OFFLOAD_PACKETS=y
 CONFIG_QCOM_TDLS=y
 CONFIG_ENABLE_LINUX_REG=y
-CONFIG_WLAN_OFFLOAD_PACKETS=y
+CONFIG_ARCH_MMAP_RND_BITS=16
+
