--- a/arch/arm64/configs/msm-perf_defconfig
+++ b/arch/arm64/configs/msm-perf_defconfig
@@ -494,10 +494,10 @@ CONFIG_MSM_PIL_SSR_GENERIC=y
 CONFIG_MSM_PIL_MSS_QDSP6V5=y
 CONFIG_MSM_OCMEM=y
 CONFIG_MSM_OCMEM_LOCAL_POWER_CTRL=y
-CONFIG_MSM_BOOT_STATS=y
 CONFIG_MSM_SCM=y
-CONFIG_MSM_CORE_CTL=y
+CONFIG_MSM_CORE_CTL_HELPER=y
 CONFIG_MSM_PERFORMANCE=y
+CONFIG_MSM_PERFORMANCE_HOTPLUG=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 CONFIG_MSM_TZ_LOG=y
 #CONFIG_EXT2_FS is not set
@@ -553,7 +553,6 @@ CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 CONFIG_BUILD_ARM64_UNCOMPRESSED_APPENDED_DTB_IMAGE=y
-CONFIG_UID_CPUTIME=y
 CONFIG_MSM_BOOT_STATS=y
 CONFIG_LENOVO_WT82918=y
 CONFIG_PRONTO_WLAN=y
@@ -566,4 +565,3 @@ CONFIG_WLAN_OFFLOAD_PACKETS=y
 CONFIG_QCOM_TDLS=y
 CONFIG_ENABLE_LINUX_REG=y
 CONFIG_ARCH_MMAP_RND_BITS=16
-
